--- a/js/examples/manifest.json
+++ b/js/examples/manifest.json
@@ -70,6 +70,11 @@
             "title": "Dashed-Lines",
             "descr": "Use ARROWS to change dash (⇦ ⇨) and gap (⇧ ⇩) size",
             "entry": "dashed-lines.js"
+        },
+        {
+            "title": "Visibility",
+            "descr": "DRAG and DROP the shapes to see the light effect and press L to show the lines",
+            "entry": "visibility.js"
         }
     ]
 }
