Add fractal lightning bolt

--- a/js/examples/manifest.json
+++ b/js/examples/manifest.json
@@ -55,6 +55,11 @@
     ],
     "fractal": [
         {
+            "title": "Lightning Bolt",
+            "descr": "CLICK to create a lightning bolt",
+            "entry": "lightning-bolt.js"
+        },
+        {
             "title": "Phyllotaxis",
             "descr": "",
             "entry": "phyllotaxis.js"
