Add scale mode example and remove unused files

--- a/js/examples/manifest.json
+++ b/js/examples/manifest.json
@@ -4,6 +4,11 @@
             "title": "Bevier-Curve",
             "descr": "DRAG and DROP the dots to change the curve",
             "entry": "bezier-curve.js"
+        },
+        {
+            "title": "Scale-Mode",
+            "descr": "CLICK to switch the scale mode",
+            "entry": "scale-mode.js"
         }
     ],
     "geometry": [
