Add angle look at example

--- a/js/examples/manifest.json
+++ b/js/examples/manifest.json
@@ -1,6 +1,11 @@
 {
     "math": [
         {
+            "title": "Angle-LookAt",
+            "descr": "Move the MOUSE",
+            "entry": "angle-lookat.js"
+        },
+        {
             "title": "Bevier-Curve",
             "descr": "DRAG and DROP the dots to change the curve",
             "entry": "bezier-curve.js"
